--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
 
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="/static/style.css">
-        <link rel="stylesheet" href="/static/style2.css">
+        <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="..../static/style.css">
+        <link rel="stylesheet" href="..../static/style2.css">
         <title>BUddies Tourlines</title>
     </head>
     <body style="background-color:black;color: white !important;;">
@@ -33,8 +33,8 @@
       </nav>
       <div class="content">
         <video playsinline autoplay muted loop id="bgvid">
-          <source src="/static/videos/start2.mp4" type="video/mp4">
-          <source src="/static/videos/start2.mp4" type="video/mp4">
+          <source src="../static/videos/start2.mp4" type="video/mp4">
+          <source src="../static/videos/start2.mp4" type="video/mp4">
         </video>
         
     
@@ -48,21 +48,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="/static/trans.png" class="d-block w-100" alt="..." height="350rem" style="opacity:0.7; ">
+                <img src="../static/trans.png" class="d-block w-100" alt="..." height="350rem" style="opacity:0.7; ">
                 <div class="carousel-caption d-none d-md-block">
                   <h5 style="font-size:5rem">Buddies Tourlines</h5>
                   <p style="color:#000000;"><q>Any fool can write code that a computer can understand. Good programmers write code that humans can understand.</q></p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/static/trans.png" class="d-block w-100" alt="..." height="350rem">
+                <img src="../static/trans.png" class="d-block w-100" alt="..." height="350rem">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Buddies Tourlines</h5>
                   <p>Simplicity is the soul of efficiency</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/static/trans.png" class="d-block w-100" alt="..." height="350rem">
+                <img src="../static/trans.png" class="d-block w-100" alt="..." height="350rem">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Buddies Tourlines</h5>
                   <p>The computer was born to solve problems that did not exist before.</p>
