--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <link rel="shortcut icon" href="../static/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="..../static/style.css">
-        <link rel="stylesheet" href="..../static/style2.css">
+        <link rel="stylesheet" href="../static/style.css">
+        <link rel="stylesheet" href="../static/style2.css">
         <title>BUddies Tourlines</title>
     </head>
     <body style="background-color:black;color: white !important;;">
